--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,52 +2,186 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
-/* body {
-} */
-
-.nav-bar, .nav-links, .nav-buttons {
-    display: flex;
-}
-
-.nav-bar {
-    justify-content: space-around;
-}
-
-.nav-links {
-    justify-content: space-around;
-}
-.nav-links > li {
-    margin: 0 2rem 0;
-}
-
-.nav-buttons > li {
-    margin: 0 20px 0;
-}
-
-ul {
-    list-style-type: none;
-}
-
-main {
-    background-color: palevioletred;
+body {
+    background: beige;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+}
+
+header {
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 10vh;
+    padding: 20px 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background: blanchedalmond; */
+}
+
+.logo {
+    font-size: 30px;
+    font-weight: 700;
+    color: black;
+}
+
+.nav-list {
+    display: flex;
+}
+
+.nav-list a {
+    margin-left: 60px;
+    font-size: 15px;
+    font-weight: 400;
+    color: black;
+    border-bottom: 3px dotted transparent;
+    transition: all .5s ease;
+}
+
+.nav-list a:hover {
+    border-bottom: 2px dotted black;
+}
+
+.log-in-button {
+    background: transparent;
+    padding: 8px 30px;
+    color: black;
+    border-radius: 10px;
+    transition: all .3s ease;
+}
+
+.log-in-button:hover {
+    background: black;
+    color: white;
+    padding: 8px 30px;
+}
+
+.main-section {
+    padding: 0;
+    /* background: yellow; */
+    top: 0;
+    height: 100%;
+    width: 100%;
+    min-height: 90vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2rem;
+    padding: 0 10%;
+}
+
+.main-section-text {
     margin: 0;
+}
+
+.main-section-text div {
+    margin-bottom: 30px;
+}
+
+.main-section-text p {
+    font-size: 55px;
+    font-weight: 700;
+}
+
+.all-services-btn {
+    background: black;
+    padding: 8px 30px;
+    margin-bottom: 30px;
+    color: white;
+    border-radius: 10px;
+    display: inline-block;
+    transition: all .3s ease;
+}
+
+.all-services-btn:hover {
+    background: white;
+    color: black;
+}
+
+.main-section-text .clients {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.main-section img {
+    background-color: greenyellow;
+    max-width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
+
+.main-section-image {
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 0 auto
+}
+
+.booking-section {
+    color: white;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
     text-align: center;
-    padding: 20px;
-    border: 1px solid #ccc;
 }
 
 .booking-card {
-    padding: 150px 300px;
-    background-color: aquamarine;
+    height: 50%;
+    width: 40%;
+    background: black;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-.booking-quote {
-    font-size: 40px;
+.booking-card-text {
+    font-size: 55px;
+    font-weight: 400;
+}
+
+.booking-card select {
+    margin-right: 10px;
+    max-width: 60%;
+}
+
+.book-btn {
+    border: none;
+    background: white;
+    padding: 8px 30px;
+    color: black;
+    border-radius: 10px;
+    transition: all .3s ease;
+}
+
+.attributes-section {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    height: 100vh;
+    padding: 0 10%;
+    display: grid;
+    place-items: center;
+    text-align: left;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5rem;
+}
+
+.att-card {
+    background: black;
+    color: white;
+    padding: 20% 10%;
+    border-radius: 10px;
 }
