changed folder structure

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../../public/css/style.css">
 </head>
 <body>
     <header class="header">
@@ -30,7 +30,7 @@
             <p class="clients">5K+ Happy Clients</p>
         </div>
         <div class="main-section-image">
-            <img src="../public/images/technicians.jpg" alt="technicians">
+            <img src="../../public/images/technicians.jpg" alt="technicians">
         </div>
     </section>
     <section class="booking-section">
