--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,8 +14,8 @@
     <header class="header">
         <a class="logo" href="">ServEase</a>
         <ul class="nav-list">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="http://localhost:5000">Home</a></li>
+            <li><a href="">Services</a></li>
             <li><a href="">Contact Us</a></li>
         </ul>
         <a class="log-in-button" href="http://localhost:5000/api/auth/login">Log in</a>
