--- a/src/views/log_in.html
+++ b/src/views/log_in.html
@@ -13,7 +13,7 @@
     <header class="header">
         <a class="logo" href="">ServEase</a>
         <ul class="nav-list">
-            <li><a href="">Home</a></li>
+            <li><a href="http://localhost:5000">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact Us</a></li>
         </ul>
@@ -21,9 +21,11 @@
     <section class="login-section">
         <div class="login-container">
             <h2>Log in</h2>
+            <div id="emailError" class="error-message"></div>
+            <div id="passwordError" class="error-message"></div>
             <form class="login-form" action="#" method="post">
                 <div class="form-group">
-                    <label for="username">Email:</label>
+                    <label for="email">Email:</label>
                     <input type="text" id="email" name="email" required>
                 </div>
                 <div class="form-group">
@@ -31,10 +33,14 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <div class="form-group">
-                    <button type="submit">Log in</button>
+                    <p id="forgot-password"><a href="">Forgot password?</a></p>
+                </div>
+                <div class="form-group">
+                    <button id="login-btn" onclick="login()">Log in</button>
                 </div>
             </form>
         </div>
     </section>
+    <!-- <script src="../../public/js/client.js"></script> -->
 </body>
 </html>
