--- a/src/views/log_in.html
+++ b/src/views/log_in.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ServEase | Log in</title>
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../public/css/login.css">
+    <script src="../../public/js/client.js"></script>
 </head>
 <body>
     <header class="header">
@@ -21,8 +22,6 @@
     <section class="login-section">
         <div class="login-container">
             <h2>Log in</h2>
-            <div id="emailError" class="error-message"></div>
-            <div id="passwordError" class="error-message"></div>
             <form class="login-form" action="#" method="post">
                 <div class="form-group">
                     <label for="email">Email:</label>
@@ -32,11 +31,12 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
+                <div id="loginError" class="error-message">* Wrong email or password</div>
                 <div class="form-group">
                     <p id="forgot-password"><a href="">Forgot password?</a></p>
                 </div>
                 <div class="form-group">
-                    <button id="login-btn" onclick="login()">Log in</button>
+                    <button id="login-btn">Log in</button>
                 </div>
             </form>
         </div>
