--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,7 +9,10 @@
 }
 
 body {
-    background: beige;
+    background-color: #FDF5E6;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23ffe4c4' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23ffe4c4' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23fce8c8' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23fee4be' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23faebcc' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23fbe5b9' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23f8efd1' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23f8e6b3' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23f6f2d7' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23f3e7ae' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23f5f5dc' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23eee8aa' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
     display: flex;
     flex-direction: column;
 }
@@ -57,8 +60,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #F5F5DC;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='120' viewBox='0 0 120 120'%3E%3Cpolygon fill='%23DEB887' points='120 120 60 120 90 90 120 60 120 0 120 0 60 60 0 0 0 60 30 90 60 120 120 120 '/%3E%3C/svg%3E");
 }
 
 .login-container {
