--- a/src/views/main.html
+++ b/src/views/main.html
@@ -24,8 +24,17 @@
             </div>
         </a>
     </header>
-    <section class="banner">
-        <h2 class="banner-text">Reliable Home Services, Exceptional Results 👌🏽</h2>
+    <section class="booking-card-section">
+        <div class="booking-card">
+            <h2 class="banner-text">
+                Choose the service you need,<br>
+                and professional help is just a booking away!
+            </h2>
+            <div>
+                <input type="text">
+                <button>Book</button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
