fixed 'Confirm Form Resubmission' on page reload for login page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,7 +76,7 @@ header {
 .booking-card {
     padding: 0 30px;
     height: 80%;
-    background-color: orange;
+    background-color: white;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -89,4 +89,5 @@ header {
     font-size: 30px;
     font-weight: 500;
     color: black;
+    margin-bottom: 12px
 }
