--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,12 +13,10 @@
 <body>
     <header class="header">
         <a class="logo" href="">ServEase</a>
-        <ul class="nav-list">
-            <li><a href="http://localhost:5000">Home</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact Us</a></li>
-        </ul>
-        <a class="log-in-button" href="http://localhost:5000/api/auth/login">Log in</a>
+        <div>
+            <a class="log-in-button" href="http://localhost:5000/api/auth/login">Log in</a>
+            <a class="sign-up-button" href="http://localhost:5000/api/auth/register">Sign up</a>
+        </div>
     </header>
     <section class="main-section">
         <div class="main-section-text">
@@ -123,7 +121,7 @@
         </div>
     </section>
     <footer >
-        <p>&copy; 2023 Isaac Sarfo.</p>
+        <p>&copy; 2023 ServEase.</p>
         <p>
             Built by <a href="https://github.com/sarf01k" target="_blank" class="github-username">@sarf01k</a>
         </p>
