--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,6 @@ header {
     top: 0;
     right: 0;
     width: 100%;
-    height: 10vh;
     padding: 20px 80px;
     display: flex;
     justify-content: space-between;
@@ -34,26 +33,10 @@ header {
     color: black;
 }
 
-.nav-list {
-    display: flex;
-}
-
-.nav-list a {
-    margin-left: 60px;
-    font-size: 15px;
-    font-weight: 400;
-    color: black;
-    border-bottom: 3px dotted transparent;
-    transition: all .5s ease;
-}
-
-.nav-list a:hover {
-    border-bottom: 2px dotted black;
-}
-
 .log-in-button {
     background: transparent;
-    padding: 8px 30px;
+    border: 1px solid transparent;
+    padding: 8px 20px;
     color: black;
     border-radius: 10px;
     transition: all .3s ease;
@@ -62,16 +45,30 @@ header {
 .log-in-button:hover {
     background: black;
     color: white;
-    padding: 8px 30px;
+    padding: 8px 20px;
+}
+
+.sign-up-button {
+    background: transparent;
+    border: 1px solid black;
+    padding: 8px 20px;
+    color: black;
+    border-radius: 10px;
+    transition: all .3s ease;
+}
+
+.sign-up-button:hover {
+    background: black;
+    color: white;
+    padding: 8px 20px;
 }
 
 .main-section {
     padding: 0;
-    /* background: yellow; */
     top: 0;
     height: 100%;
     width: 100%;
-    min-height: 90vh;
+    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
@@ -183,10 +180,9 @@ select {
 }
 
 .testimonials-section {
-    position: relative;
     height: 70%;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     padding: 0 10%;
     display: block;
     place-items: center;
