--- a/src/views/sign_up.html
+++ b/src/views/sign_up.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ServEase | Log in</title>
+    <title>ServEase | Register</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../public/css/login.css">
+    <link rel="stylesheet" href="../../public/css/sign_up.css">
 </head>
 <body>
     <header class="header">
         <a class="logo" href="">ServEase</a>
     </header>
-    <section class="login-section">
-        <div class="login-container">
-            <h2>Log in</h2>
-            <form class="login-form" action="#" method="post">
+    <section class="sign-up-section">
+        <div class="sign-up-container">
+            <h2>Sign up</h2>
+            <form class="sign-up-form" action="#" method="post">
+                <div class="form-group">
+                    <label for="first-name">First name(s):</label>
+                    <input type="text" id="first-name" name="first-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="last-name">Last name:</label>
+                    <input type="text" id="first-name" name="first-name" required>
+                </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="text" id="email" name="email" required>
@@ -30,7 +38,7 @@
                     <p id="forgot-password"><a href="">Forgot password?</a></p>
                 </div>
                 <div class="form-group">
-                    <button id="login-btn">Log in</button>
+                    <button id="login-btn">Sign up</button>
                 </div>
             </form>
         </div>
