--- a/src/views/sign_up.html
+++ b/src/views/sign_up.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <label for="last-name">Last name:</label>
-                    <input type="text" id="first-name" name="first-name" required>
+                    <input type="text" id="last-name" name="last-name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
@@ -33,15 +33,16 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <div id="loginError" class="error-message">* Wrong email or password</div>
                 <div class="form-group">
-                    <p id="forgot-password"><a href="">Forgot password?</a></p>
+                    <p id="already"><a href="">I already have an account</a></p>
                 </div>
+                <div id="signUpError" class="error-message">* Please fill all fields</div>
                 <div class="form-group">
-                    <button id="login-btn">Sign up</button>
+                    <button id="sign-up-btn">Sign up</button>
                 </div>
             </form>
         </div>
     </section>
+    <script src="../../public/js/sign_up.js"></script>
 </body>
 </html>
