--- a/src/views/sign_up.html
+++ b/src/views/sign_up.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <link rel="stylesheet" href="../../public/css/sign_up.css">
 </head>
 <body>
@@ -26,6 +27,13 @@
                     <input type="text" id="last-name" name="last-name" required>
                 </div>
                 <div class="form-group">
+                    <label for="phone">Phone No.:</label>
+                    <div class="input-container">
+                        <iconify-icon icon="flag:gh-4x3" id="flag-icon"></iconify-icon>
+                        <input type="tel" id="phone" name="phone" required placeholder="Enter a phone number">
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="text" id="email" name="email" required>
                 </div>
@@ -34,7 +42,7 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <div class="form-group">
-                    <p id="already"><a href="">I already have an account</a></p>
+                    <p id="already"><a href="http://localhost:5000/api/auth/login">I already have an account</a></p>
                 </div>
                 <div id="signUpError" class="error-message">* Please fill all fields</div>
                 <div class="form-group">
