fixed bugs in req.cookies

--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -49,5 +49,10 @@
             </div>
         </div>
     </section>
+    <section class="services-section">
+        <% services.forEach(service => { %>
+            <p value="<%= service.title %>"><%= service.title %></p>
+        <% }); %>
+    </section>
 </body>
 </html>
