--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../public/css/main.css"></link>
+    <link rel="stylesheet" href="../../public/css/home.css"></link>
 </head>
 <body>
     <header class="header">
@@ -44,17 +44,23 @@
         </div>
     </section>
     <section class="services-section">
+        <div class="category-card">
         <% categories.forEach(category => { %>
-            <p value="<%= category.name %>"><%= category.name %></p>
+            <p id="category-name" value="<%= category.name %>"><%= category.name %></p>
             <% category.services.forEach(serviceId => { %>
                 <% const service = services.find(s => String(s._id) === String(serviceId)); %>
                 <% if (service) { %>
-                    <p value="<%= service.title %>"><%= service.title %></p>
+                    <div>
+                        <p value="<%= service.title %>"><%= service.title %></p>
+                    </div>
                 <% } else { %>
-                    <p>No service found for ID <%= serviceId %></p>
+                    <div>
+                        <p>No service found for ID <%= serviceId %></p>
+                    </div>
                 <% } %>
             <% }); %>
         <% }); %>
+        </div>
     </section>
 </body>
 </html>
