--- a/src/views/welcome.ejs
+++ b/src/views/welcome.ejs
@@ -14,8 +14,8 @@
     <header class="header">
         <a class="logo" href="">ServEase</a>
         <div>
-            <a class="log-in-button" href="http://localhost:5000/api/auth/login">Log in</a>
-            <a class="sign-up-button" href="http://localhost:5000/api/auth/register">Sign up</a>
+            <a class="log-in-button" href="/login">Log in</a>
+            <a class="sign-up-button" href="/register">Sign up</a>
         </div>
     </header>
     <section class="main-section">
