--- a/src/views/log_in.ejs
+++ b/src/views/log_in.ejs
@@ -25,7 +25,7 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <div id="loginError" class="error-message">* Wrong email or password</div>
+                <div id="loginError" class="error-message"></div>
                 <div class="form-group">
                     <p id="forgot-password"><a href="">Forgot password?</a></p>
                 </div>
