--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -17,7 +17,7 @@
             <li><a href="">About</a></li>
             <li><a href="">Contact Us</a></li>
         </ul>
-        <a href="/api/auth/logout">
+        <a href="/logout">
             <div id="logout-btn">
                 Log out
                 <i class='bx bx-log-out' style='color:#ffffff'  ></i>
