--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -44,21 +44,9 @@
         </div>
     </section>
     <section class="services-section">
-        <div class="category-card">
-        <% categories.forEach(category => { %>
-            <p id="category-name" value="<%= category.name %>"><%= category.name %></p>
-            <% category.services.forEach(serviceId => { %>
-                <% const service = services.find(s => String(s._id) === String(serviceId)); %>
-                <% if (service) { %>
-                    <div>
-                        <p value="<%= service.title %>"><%= service.title %></p>
-                    </div>
-                <% } else { %>
-                    <div>
-                        <p>No service found for ID <%= serviceId %></p>
-                    </div>
-                <% } %>
-            <% }); %>
+        <div class="service-card">
+        <% services.forEach(service => { %>
+            <p id="service-title" value="<%= service.title %>"><%= service.title %></p>
         <% }); %>
         </div>
     </section>
