--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -44,9 +44,12 @@
         </div>
     </section>
     <section class="services-section">
-        <div class="service-card">
+        <p class="section-title">Our Services</p>
+        <div class="service-cards">
         <% services.forEach(service => { %>
-            <p id="service-title" value="<%= service.title %>"><%= service.title %></p>
+            <div class="service-card">
+                <p class="service-title" value="<%= service.title %>"><%= service.title %></p>
+            </div>
         <% }); %>
         </div>
     </section>
