change - color theme & url redirections

--- a/src/views/log_in.ejs
+++ b/src/views/log_in.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="">ServEase</a>
+        <a class="logo" href="/">ServEase</a>
     </header>
     <section class="login-section">
         <div class="login-container">
