--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="">ServEase</a>
+        <a class="logo" href="/home">ServEase</a>
         <ul class="nav-list">
             <li><a href="">About</a></li>
             <li><a href="">Contact Us</a></li>
