--- a/src/views/sign_up.ejs
+++ b/src/views/sign_up.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="">ServEase</a>
+        <a class="logo" href="/">ServEase</a>
     </header>
     <section class="sign-up-section">
         <div class="sign-up-container">
@@ -42,7 +42,7 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <div class="form-group">
-                    <p id="already"><a href="/api/auth/login">I already have an account</a></p>
+                    <p id="already"><a href="/login">I already have an account</a></p>
                 </div>
                 <div id="signUpError" class="error-message">* Please fill all fields</div>
                 <div class="form-group">
