--- a/src/views/welcome.ejs
+++ b/src/views/welcome.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="">ServEase</a>
+        <a class="logo" href="/">ServEase</a>
         <div>
             <a class="log-in-button" href="/login">Log in</a>
             <a class="sign-up-button" href="/register">Sign up</a>
