--- a/public/css/home.css
+++ b/public/css/home.css
@@ -62,7 +62,7 @@ header {
 }
 
 .booking-card-section {
-    height: 70vh;
+    height: 90vh;
     width: 100%;
     background-image: url(../images/booking-card-section.jpg);
     background-size: cover;
@@ -160,6 +160,7 @@ header {
     width: 220px;
     position: relative;
     border-radius: 20px;
+    overflow: hidden;
 }
 
 .service-title {
@@ -171,4 +172,9 @@ header {
     text-align: center;
     border-radius: 20px;
     padding: 10px;
+}
+
+.service-card-image {
+    width: 100%;
+    height: 100%;
 }
