added 'Profile' page

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -17,12 +17,19 @@
             <li><a href="">About</a></li>
             <li><a href="">Contact Us</a></li>
         </ul>
-        <a href="/logout">
-            <div id="logout-btn">
-                Log out
-                <i class='bx bx-log-out' style='color:#ffffff'  ></i>
-            </div>
-        </a>
+        <div class="profile-logout">
+            <a href="/profile">
+                <div id="user-icon">
+                    <i class='bx bx-user bx-sm' style='color:#000000'  ></i>
+                </div>
+            </a>
+            <a href="/logout">
+                <div id="logout-btn">
+                    Log out
+                    <i class='bx bx-log-out' style='color:#ffffff'  ></i>
+                </div>
+            </a>
+        </div>
     </header>
     <section class="booking-card-section">
         <div class="booking-card">
