--- a/public/css/home.css
+++ b/public/css/home.css
@@ -48,9 +48,15 @@ header {
     border-bottom: 2px dotted black;
 }
 
+.profile-logout {
+    display: flex;
+    align-items: end;
+}
+
 #logout-btn {
     color: white;
     background: black;
+    margin-left: 30px;
     padding: 8px 20px;
     border-radius: 10px;
     transition: all .3s ease;
